[package]
name = "sudoku"
version = "0.1.0"
authors = ["pcpthm <pcpthm@gmail.com>"]
edition = "2018"
license = "MIT"

# [profile.release]
# debug = true

[[bench]]
name = "solve"
harness = false

[dependencies]
failure = "0.1.3"
structopt = "0.2.13"
failure_derive = "0.1.3"
lazy_static = "1.2.0"
rand = "0.6.1"

[dev-dependencies]
criterion = "0.2.5"
